# Matrix-Library

./: .gitignore  CMakeLists.txt  Main.cpp  Matrix.h  NeuralNetworkLayer.h  README.md  mat_mul_kernel.cl
include/: Exceptions.h  Matrix.h
src/: Main.cpp  Tests.cpp
